tests/sksl/errors/ReservedNameInvariant.glsl
### Compilation failed:

error: 1: 'invariant' is a reserved word
int invariant;
    ^^^^^^^^^
1 error
